--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Link JS  -->
-    <script src="./script.js" defer></script>
-
-    <!-- Link CSS  -->
+      rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -36,6 +30,9 @@
       </div>
 
       <button class="btn">New Game</button>
+
+
+      <script src="script.js"></script>
     </div>
   </body>
 </html>
